feat: status list API review (#24)
* docs: update API spec

* feat: add issuer to status list token

* fix: change revokedAt timestamp to be in seconds

* docs: update API spec

* build: add SELF_URL env var to Revoke Lambda function
