# src/functions/revokeHandler.ts
@@ -13,6 +13,7 @@ import { StatusList } from "../common/types/statusList";
 const REQUIRED_ENV_VARS = [
   "STATUS_LIST_BUCKET_NAME",
   "SIGNING_KEY_ID",
+  "SELF_URL",
 ] as const;
 
 export async function handler(
@@ -22,18 +23,18 @@ export async function handler(
   logger.addContext(context);
   logger.info(LogMessage.REVOKE_LAMBDA_STARTED);
 
-  const config = getConfig(process.env, REQUIRED_ENV_VARS);
+  const appConfig = getConfig(process.env, REQUIRED_ENV_VARS);
 
-  const { body } = event;
-  const { uri, idx } = extractUriAndIndex(body);
+  const { uri, idx } = extractUriAndIndex(event.body);
   const url = new URL(uri);
   const objectKey = url.pathname.slice(1);
-  const updatedToken = await createToken(
-    getRevokedConfiguration(idx),
+  const updatedToken = await createToken({
+    selfUrl: appConfig.SELF_URL,
+    statusList: getRevokedConfiguration(idx),
     uri,
-    config.SIGNING_KEY_ID,
-  );
-  await putObject(config.STATUS_LIST_BUCKET_NAME, objectKey, updatedToken);
+    keyId: appConfig.SIGNING_KEY_ID,
+  });
+  await putObject(appConfig.STATUS_LIST_BUCKET_NAME, objectKey, updatedToken);
 
   logger.info(LogMessage.REVOKE_LAMBDA_COMPLETED);
   return {
@@ -41,7 +42,7 @@ export async function handler(
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({
       message: "Request processed for revocation",
-      revokedAt: Date.now(),
+      revokedAt: Math.floor(Date.now() / 1000),
     }),
   };
 }
